--- a/ccatcracker/templates/pages/ccat-course.html
+++ b/ccatcracker/templates/pages/ccat-course.html
@@ -42,6 +42,40 @@
    <div class="container">
       <div class="row">
          <div class="col-md-8">
+               <h3 style="color: green">Why Should I join ccatcracker Course not Private ? </h3>
+               <p>
+                  I got mail 4,5 why should we join your course why not private and how can you be sure your 
+                  course will give us good rank ? 
+                  <br> <br>
+                  So , I will tell why you should join ccatcracker course . <br> <br>
+                  Look its simple ccat exam is not too much difficult so it doesnt make any sense that you are 
+                  investing 12,15k for pre cat 40 days course . <br><br>
+                  Believe me or not ask anyone who completed pre dac course is he/ she able to solve C++ coding
+                  or they are able to solve some data Structure . <br><br>
+                  You can ask by your self I will tell 70 % student dont know even C ,C++ basic but they got 
+                  good rank its just luck . <br> <br>
+                  But while doing CDAC how much they face problem that you will know while doing cdac  . <br><br>
+                  And why you dont want self study if anyone tell you start study then only you will study 
+                  if you think by doing these activity you will great success in CDAC then you are wrong my friend . 
+                  <br> <br>
+                  I have completed CDAC i know that what issues we face thats why I developed these free website . <br>
+                  <br>
+                  Now if you do my course you can able to solve C,Data Structure,C++ programming that much we have covered 
+                  from very basic to advance . <br> <br>
+                  My goal is not only get success in ccat exam I want whoever follow my website will get placed within 
+                  first month of placement . <br> <br>
+                  And thats why i have coverd too much syllabus which will make you very strong and confident while doing CDAC . 
+                  <br> <br>
+                  This is the benefit of my course you can as your own speed its not mandatory you have to finish it in 45 days 
+                  if you not able to understand any concept watch video twice that you cannot do in private classes . <br>
+
+                  <br> 
+                  Thats it from my side if you like join else Your own wish ... <br> <br>
+                  
+                  All The Best Happy Coding .. <br>
+
+               </p>
+
           
             <h3>Welcome to ccatcracker 45 Days Crash course  . </h3>
             <h4 style="color: green">Learning Agenda  : </h4>
@@ -68,7 +102,7 @@
                 
                 <h4 style="color: green">Data Structure (Day 27 -  Day 31) :</h4> <br>
 
-                <a style="margin-left: 30%"  href="#" class="btn btn-secondary text-white btn-lg">Data Structure Tutorials</a><br> <br>
+                <a style="margin-left: 30%"  href="{% url 'Data-Structure-Tutorial' %}" class="btn btn-secondary text-white btn-lg">Data Structure Tutorials</a><br> <br>
             
                 <h4 style="color: green">Operating System (Day 32 -  Day 34) :</h4> <br>
 
