--- a/ccatcracker/templates/C/implement.html
+++ b/ccatcracker/templates/C/implement.html
@@ -150,7 +150,7 @@
                 know if you have any doubts 
             </h5>
              <br> <br>
-            <a  style="margin-left: 60%"  href="{% url 'Linked-List-Tutorial' %}" class="btn btn-secondary text-white btn-lg">Day-2</a>
+            <a  style="margin-left: 60%"  href="{% url 'Tree-Data-Structure' %}" class="btn btn-secondary text-white btn-lg">Last-Day</a>
             <br>  <br>
 
         </div>
