--- a/ccatcracker/templates/pages/ccat-course.html
+++ b/ccatcracker/templates/pages/ccat-course.html
@@ -106,7 +106,7 @@
             
                 <h4 style="color: green">Operating System (Day 32 -  Day 34) :</h4> <br>
 
-                <a style="margin-left: 30%"  href="#" class="btn btn-secondary text-white btn-lg">Opearating System Tutorials</a><br> <br>
+                <a style="margin-left: 30%"  href="{% url 'OS-Tutorial' %}" class="btn btn-secondary text-white btn-lg">Opearating System Tutorials</a><br> <br>
             
                 <h4 style="color: green">Networking  (Day 35-  Day 36) :</h4> <br>
 
