--- a/ccatcracker/templates/C/dif.html
+++ b/ccatcracker/templates/C/dif.html
@@ -102,8 +102,9 @@
          <h5 style="color: brown">Note : Please read theory very carefully if you didnt understand any concept search it on google 
             because only theory based objective questions will come in exam .
             </h5>
-             <br> <br>
-            <a  style="margin-left: 40%"  href="{% url 'Difference-In-Os' %}" class="btn btn-secondary text-white btn-lg">Last-Day</a>
+            <a href="{% url 'download' %}"><button class="btn"><i class="fa fa-download"></i> Download</button></a>
+            <br> <br>
+            <a  style="margin-left: 40%"  href="{% url 'ccat_notify' %}" class="btn btn-secondary text-white btn-lg">Back-To-Home</a>
             <br>  <br>
 
         </div>
