--- a/ccatcracker/templates/C/intro.html
+++ b/ccatcracker/templates/C/intro.html
@@ -4,8 +4,10 @@
 {% block content %}
 <style>
       
-      
-        </style>
+p{
+  font-size: 17px;
+}      
+</style>
     <!-- Breadcrumb -->
     <section id="bc" class="mt-3">
         <div class="container">
@@ -56,7 +58,7 @@
                         As we studied earlier, 'C' is a base language for many programming languages. So, learning 'C' as the main language will play an important role while studying other programming languages. It shares the same concepts such as data types, operators, control statements and many more. 'C' can be used widely in various applications. It is a simple language and provides faster execution. There are many jobs available for a 'C' developer in the current market.
                     
                 </p>
-                <h3 style="color: green;margin-left: 10%"></h3> How 'C' Works? :</h3>
+                <h3 style="color: green"> How 'C' Works? :</h3>
                 <p>
                         C is a compiled language. A compiler is a special tool that compiles the program and converts it into the object file which is machine readable. After the compilation process, the linker will combine different object files and creates a single executable file to run the program. 
                         Nowadays, various compilers are available online, and you can use any of those compilers. The functionality will never differ and most of the compilers will provide the features required to execute both 'C' and 'C++' programs.
