--- a/ccatcracker/templates/C/projects.html
+++ b/ccatcracker/templates/C/projects.html
@@ -9,7 +9,7 @@
    margin-left: 0;
    margin-right: 0;
    font-style: italic;
-   font-size: 15px;
+   font-size: 17px;
    }
    pre{
    background-color: #e0e0e0;
@@ -181,8 +181,9 @@
             </h4>
              
                <h4>Note : If you have any doubts feel free to contact us If You Didnt understand any concept ..</h4>
-           
-            <a  style="margin-left: 60%"  href="{% url 'projects-In-C-Tutorial' %}" class="btn btn-secondary text-white btn-lg">CPP</a>
+               <br><br>
+            <a  style="margin-left: 40%"  href="{% url 'cpp' %}" class="btn btn-secondary text-white btn-lg">CPP</a>
+            <br><br>
          </div>
       </div>
    </div>
