--- a/ccatcracker/templates/pages/ccat-course.html
+++ b/ccatcracker/templates/pages/ccat-course.html
@@ -94,11 +94,11 @@
                 <br>
                 <h4 style="color: green">C Language (Day 1 -  Day 15) :</h4>
                 <br>
-                <a style="margin-left: 30%"  href="#" class="btn btn-secondary text-white btn-lg">C Language Tutorial</a><br> 
+                <a style="margin-left: 30%"  href="{% url 'intro' %}" class="btn btn-secondary text-white btn-lg">C Language Tutorial</a><br> 
                 <br> <br>
                 <h4 style="color: green">C++ Language (Day 16 -  Day 26) :</h4> <br>
 
-                <a style="margin-left: 30%"  href="#" class="btn btn-secondary text-white btn-lg">C++ Language Tutorials</a><br> <br>
+                <a style="margin-left: 30%"  href="{% url 'cpp' %}" class="btn btn-secondary text-white btn-lg">C++ Language Tutorials</a><br> <br>
                 
                 <h4 style="color: green">Data Structure (Day 27 -  Day 31) :</h4> <br>
 
@@ -110,11 +110,11 @@
             
                 <h4 style="color: green">Networking  (Day 35-  Day 36) :</h4> <br>
 
-                <a style="margin-left: 30%"  href="#" class="btn btn-secondary text-white btn-lg">Networking Tutorials</a><br> <br>
+                <a style="margin-left: 30%"  href="{% url 'Networking-Tutorials' %}" class="btn btn-secondary text-white btn-lg">Networking Tutorials</a><br> <br>
                 
                 <h4 style="color: green">English & Aptitude (Day 37 - Day 45):</h4> <br>
 
-                <a style="margin-left: 30%"  href="#" class="btn btn-secondary text-white btn-lg">English & Aptitude </a><br> <br>
+                <a style="margin-left: 30%"  href="{% url 'English-Tutorial' %}" class="btn btn-secondary text-white btn-lg">English & Aptitude </a><br> <br>
                 <br> <br>
                 <h5 style="color: black">Note : Course will start from 1st sep 2019 </h5>
          </div>
