--- a/ccatcracker/templates/pages/index.html
+++ b/ccatcracker/templates/pages/index.html
@@ -1,6 +1,11 @@
 {% extends 'base.html '%}
 
 {% block content %}
+<style>
+  p {
+        font-size: 17px;
+  }
+</style>
  <!-- Showcase -->
  <section id="showcase" style="background-image: url(../static/img/ccee.jpg);background-repeat: no-repeat;background-attachment: fixed;">
         <div class="container text-center">
@@ -52,15 +57,73 @@
       </div>
         </div>
       </section>
-      <script type="text/javascript" language="javascript">
-        var aax_size='300x250';
-        var aax_pubname = 'compute06c-21';
-        var aax_src='302';
-      </script>
-      <script type="text/javascript" language="javascript" src="http://c.amazon-adsystem.com/aax2/assoc.js"></script>
-      <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ac&ref=tf_til&ad_type=product_link&tracking_id=compute06c-21&marketplace=amazon&region=IN&placement=9387284492&asins=9387284492&linkId=66c94dd49dea49dc732487e383e9f23a&show_border=false&link_opens_in_new_window=false&price_color=333333&title_color=3f5b75&bg_color=ffffff">
-      </iframe>
+      <section id="about" class="py-4">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-8">
+              <h2>Search everything Related to cdac here </h2>
+              <p>Check out the study Material for ccat , Which college you will get  as per your rank .</p>
+             
+              <h3>What I will get on ccatcracker : </h3>
+              <p class="mt-4"> 
 
+               Here everything you will get related to cdac .how to prepare free for ccat exam , how to prepare for 
+               interview. how to prepare for ccee exam . Mock test for ccat exam . Rank wise college list . 
+              </p>
+              <br>
+              <h3 style="color: brown">Pre Dac Free Course :</h3>
+              <p>
+                    On this website I have designed free predac ccat course that course is designed in such a way 
+                    it will not only help you in cdac ccat journey but also it will help you a lot in CDAC . <br> <br>
+                    Because normally in ccat exam you will learn very basics from private coaching even if you get  good rank 
+                    after that while doing cdac students will face lots of problems because they even dont know how to code in C Language . <br> <br>
+                    This is very simple logic if you dont know C , how will you understand C++ in CDAC . And if you dont know
+                    C++ you will pick java that means you will face very very big issue while interview . <br> <br>
+
+                    Thats why pre dac is very very Important you have to prepare yourself very strong in C and C++ before join CDAC . <br> <br>
+
+                    Hence I have developed pre dac course which will give you very strong hands on for C and C++ you will get too much benefits while doing CDAC if you follow my free ccat Course . <br>
+                    <br>
+
+                    So even if you want to join any private coaching then go ahead and join class but still you can free follow my course which will help you a lot in cdac . <br> <br>
+
+                    Here we have quetions-of-the day Program in that I will upload daily one new Aptitude and Coding question with answer that will help you to prepare technically very strong during interview . <br><br>
+
+                    So dont miss this Course if you are prepare now for ccat exam . Our test series is really very very relevent to exam which will help you to understand exam pattern so dont forget to give ccat test series before exam . <br> <br> 
+
+                    Click below link for start free pre dac course . <br> <br>
+                    <a  style="margin-left: 40%"  href="{% url 'ccat' %}" class="btn btn-secondary text-white btn-lg">Pre-Dac Course</a>
+                    <br> <br>
+            
+              </p>
+              <h3 style="color: brown">What is CCEE Exam  :</h3>
+              <p>
+                Guys This is the exam on which your whole placement is depend . <br>
+                No matter in which college you studied whether it acts or sunbeam or any placemement is commom for all . <br>
+                It only depends on what is your ccee scrore thats it . <br>
+                If your ccee scrore is above 60% Then you will get lots of calls . <br>
+                If your Score is less than 60% call numbers in first month will be less . <br>  
+                So main question is how to prepare for ccee exam ? <br>
+                At the end of cdac course you might heard about acts dumps acts will give dumps and all question come only through that dumps . <br>
+                This is a very very worst joke guys there is nothing like dumps its just myths.. <br>
+                <br> 
+                Lets checkout more detail abour ccee exam click below : <br> <br>
+                <a  style="margin-left: 40%"  href="{% url 'ccee' %}" class="btn btn-secondary text-white btn-lg">CCEE Exam </a>
+                <br> <br>
+              </p>
+              <h3 style="color: brown">Which college I will get for my rank ?  :</h3>
+              <p>
+                Everyone will confuse after result declare which college i will for my rank . <br> <br>
+                so here as per last records we have provided some probability that which college you will get as per your rank . <br><br>
+                Click bewlow to check that : 
+                <br> 
+                <a  style="margin-left: 40%"  href="{% url 'cdac' %}" class="btn btn-secondary text-white btn-lg">College-My-Rank</a>
+                <br> <br>
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
       <section id="services" class="py-5 bg-secondary text-white">
           <div class="container">
             <div class="row text-center">
