--- a/ccatcracker/templates/C/some_extra.html
+++ b/ccatcracker/templates/C/some_extra.html
@@ -9,7 +9,7 @@
    margin-left: 0;
    margin-right: 0;
    font-style: italic;
-   font-size: 15px;
+   font-size: 17px;
    }
    pre{
    background-color: #e0e0e0;
@@ -127,9 +127,10 @@
             </p>
              
                <h4>Note : If you have any doubts feel free to contact us If You Didnt understand any concept ..</h4>
-           
-            <a  style="margin-left: 60%"  href="{% url 'program-In-C-Tutorial' %}" class="btn btn-secondary text-white btn-lg">Day-13</a>
-     
+            <br><br>
+            <a  style="margin-left: 40%"  href="{% url 'program-In-C-Tutorial' %}" class="btn btn-secondary text-white btn-lg">Day-13</a>
+            <br><br>
+         </div>
          </div>
       </div>
    </div>
