--- a/ccatcracker/templates/pages/interview.html
+++ b/ccatcracker/templates/pages/interview.html
@@ -20,26 +20,28 @@
             <div class="container">
               <div class="row">
                 <div class="col-md-8">
-                  <h3>How To Prepare For Interview ?</h3>
-                  <p class="lead">Most Important Questions Students always asks .</p>
+                  <h4>How To Prepare For Interview ?</h4>
+                  <p >Most Important Questions Students always asks .</p>
                   <br>
-                  <h4>Heyy Guys Latest Update Interview Preparation Will Start From 1St Sep 2019 . </h4> <br>
-              
-                  
-                  <p class="mt-4">
-                      <h4>1. On This website we will update Interview Material for DAC and Big Data Guys .</h4> <br>
-                      <h4>2. Guys Each Day We will send you an email With new topic which will clear your concepts very very detail. </h4> <br>
-                      <h4>3. If you Still didnt subscribe questions section then please go and enter you email only .</h4> <br>
-                      <h4>4. What to study from where to study for clear Interview we will give very detail guidence .</h4><br>
-                      <h4>5. Before That Please be stay with our Questions-Of-The-Day Program Daily . </h4> <br>
-                      <h4>6. This Small small thing will make something bigger guys so always be active on ccatcracker. </h4> <br>
-                      <h4>7. We will daily update something new which will help you a lot .</h4>
-
+                 
+                  <p>
+                    1. Here we are updating very Important FAQ in interview for DAC and Big Data Students . 
+                    <br>
+                    2. Dont miss any single question we will send daily reminder also . <br>
+                    
                   </p>
+                  <h5 style="color: brown">Click below links for DAC and Big Data Interview Preparation : </h5>
+                  
+
                 </div>
-                
+             
                 </div>
               </div>
+              <br> <br>
+              <a  style="margin-left: 30%"  href="{% url 'dac_interview' %}" class="btn btn-secondary text-white btn-lg">DAC </a> <br> <br>
+   
+              <a  style="margin-left: 30%"  href="{% url 'big_data_interview' %}" class="btn btn-secondary text-white btn-lg">Big Data </a> 
+            
             </div>
           </section>
 
