--- a/ccatcracker/templates/base.html
+++ b/ccatcracker/templates/base.html
@@ -3,6 +3,8 @@
 <html lang="en">
 
 <head>
+    <link rel="icon" href= "{% static '/img/ccat9.png' %}" type="image/gif" >
+ 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="{% static 'css/all.css' %}">
@@ -14,9 +16,10 @@
   <!--Lightbox-->
   <link rel="stylesheet" href="{% static 'css/lightbox.min.css' %}">
 
+
   <title>CDAC CCAT{% block title %}{% endblock %}</title>
   <body>
-      <body>
+     
        
           <!-- Top Bar -->
 
