--- a/ccatcracker/templates/pages/ccat.html
+++ b/ccatcracker/templates/pages/ccat.html
@@ -6,7 +6,13 @@
           border: 1px solid black;
           border-collapse: collapse;
         }
-        </style>
+        p{
+          font-family: sans-serif
+        }
+
+
+
+      </style>
    <!-- Breadcrumb -->
    <section id="bc" class="mt-3">
         <div class="container">
@@ -28,7 +34,6 @@
             <div class="container">
               <div class="row">
                 <div class="col-md-8">
-                  
                   
                   <h2>Search For The Perfect Study Material</h2>
                   <p class="lead">Checkout The Syllabus and Perfect notes to crack ccat with Good Rank.</p>
@@ -104,11 +109,13 @@
                 
             
         </section>
+        
         <section id="about" class="py-4">
             <div class="container">
               <div class="row">
                 <div class="col-md-8">
-                  <h3>Do You Know ? What Pre-Dac Coacing Will provide ?. </h3>
+                  
+                       <h3>Do You Know ? What Pre-Dac Coacing Will provide ?. </h3>
                       <p class="lead">Please read below instruction about predac course .</p>
                       
                       <p class="mt-4">
