--- a/ccatcracker/templates/pages/dac.html
+++ b/ccatcracker/templates/pages/dac.html
@@ -38,11 +38,11 @@
                 </div>
               </div>
               <br> <br>
-              <a  style="margin-left: 30%"  href="{% url 'dac_interview' %}" class="btn btn-secondary text-white btn-lg">Data Structure</a> <br> <br>
+              <a  style="margin-left: 30%"  href="{% url 'Top-50-Interview-Questions-Data-Structure' %}" class="btn btn-secondary text-white btn-lg">Data Structure</a> <br> <br>
    
-              <a  style="margin-left: 30%"  href="{% url 'big_data_interview' %}" class="btn btn-secondary text-white btn-lg">C++ Programming </a><br> <br>
-              
-              <a  style="margin-left: 30%"  href="{% url 'big_data_interview' %}" class="btn btn-secondary text-white btn-lg">Java Programming </a>
+              <a  style="margin-left: 30%"  href="{% url 'cpp-interview-question' %}" class="btn btn-secondary text-white btn-lg">C++ Programming </a><br> <br>
+            
+              <a  style="margin-left: 30%"  href="{% url 'Top-50-Interview-Questions-Java' %}" class="btn btn-secondary text-white btn-lg">Java Programming </a>
               
               
             
