--- a/ccatcracker/templates/base_1.html
+++ b/ccatcracker/templates/base_1.html
@@ -2,6 +2,7 @@
 {% load static %}
 <html lang="en">
 <head>
+<link rel="icon" href= "{% static '/img/ccat9.png' %}" type="image/gif" sizes="16x16">
  
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
